// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventInfoCard 1 day event renders correctly 1`] = `
<eventInfoCard__Wrapper>
  <Item
    detail="2:30pm to 2:30pm"
    icon={<DateIcon />}
    title="Friday 2 June 2006"
  />
  <Item
    detail={null}
    icon={<TicketIcon />}
    title="From £20"
  />
  <Item
    detail=""
    icon={
      <MapPinIcon
        dark={false}
      />
    }
    title="Test"
  />
</eventInfoCard__Wrapper>
`;

exports[`EventInfoCard renders correctly 1`] = `
<eventInfoCard__Wrapper>
  <Item
    detail="2:30pm to 2:30pm"
    icon={<DateIcon />}
    title="Friday 2 June 2006 to Saturday 3 June 2006"
  />
  <Item
    detail={null}
    icon={<TicketIcon />}
    title="From £20"
  />
  <Item
    detail=""
    icon={
      <MapPinIcon
        dark={false}
      />
    }
    title="Test"
  />
</eventInfoCard__Wrapper>
`;
